fixes terms overflow

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -22,6 +22,12 @@ legend {
   }
 }
 
+#content {
+  .container {
+    margin-right: 60px;
+  }
+}
+
 
 #contribution-confirm-submit {
   .inputs {
